# vm

build-source-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-source-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-400043794b1164cc90d0.json  codemodel-v2-d272948b02518497a41e.json  directory-.-Debug-c5f2bc217e4e93561c6b.json  index-2023-05-08T11-17-30-0751.json  target-source-Debug-7aa6a1b9aab3617a2718.json
build-source-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-d55a06a2006408e287f4.json  cmakeFiles-v1-8458e34bbc7299796919.json  codemodel-v2-8c14d9084c8deafa6753.json  directory-.-Debug-a3fa7cef64143ca8d3a8.json  index-2023-05-08T09-13-07-0100.json  target-source-Debug-9732347551cbeb2115cf.json
build-source-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-source-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: boot-code.h.8D88DFDB2D97491A.idx  byteType.h.EE0BC6D4D8BA44B6.idx  command-exec.cpp.3B1ADC738128C10C.idx  command-exec.h.6D117FE4686FB3BA.idx  command.cpp.E4B5D15D6665E30F.idx  command.h.DA52C75B6A02AFCD.idx  (+12 more)
build-source-Desktop_Qt_6_4_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  source
source/: CMakeLists.txt  boot-code.h  byteType.h  command-exec.cpp  command-exec.h  command.cpp  command.h  heap.cpp  heap.h  main.cpp  old-ritualka-commands.txt  ritualka-commands.txt  stack.cpp  stack.h  subprog.cpp  vm-src.cpp  vm-src.h
(+10 files in other folders)
